syntax = "proto3";

package sendlix.api.v1;

import "google/protobuf/timestamp.proto";

service Auth {
	rpc GetJwtToken(AuthRequest) returns (AuthResponse) {}
}
message AuthResponse {
	string token = 1;
	google.protobuf.Timestamp expires = 2;
}

message AuthRequest {
	oneof key {
		ApiKey apiKey = 1;
		GoogleAuthToken googleAuthToken = 2;
	}
}

message ApiKey {
	int64 keyID = 1;
	string secret = 2;
}

message GoogleAuthToken {	
	int64 keyID = 1;
	string token = 2;
}